Travail sur le design responsive mobile page logement concernant le titres, soustitre et tag s'en suit quelques correction de code concernant les differents élements où j'ai fais l'adaptation mobile.

--- a/src/assets/styles/Mixin/_mixin_Logement.scss
+++ b/src/assets/styles/Mixin/_mixin_Logement.scss
@@ -1,13 +1,94 @@
 @use '../Breakpoint';
 
-@mixin mainHeight-Logement {
-    @include Breakpoint.breakpoint-Mobile($break-min:426px, $break-max:500px){
-        margin-top: -10px;
+
+
+@mixin Divpresentation{
+    @include Breakpoint.breakpoint-Mobile($break-min:0px, $break-max:767px){
+       
+       .Divpresentation{
+        // border:1px solid green;
+        width: 100%;
+        // height: auto;
+        flex-direction: column;
+        margin-top: 0px;
+        position: relative;
+        // top:-25px;
+
+
+        .presentation1{
+            .titre,.sousTitre{
+                width: 100%;
+            }
+            .titre{
+                font-size: 18px;
+                margin-bottom: 2%;
+            }
+            .sousTitre{
+                font-size: 14px;
+            }
+        }
+
+        .presentation2{
+            // border:1px solid greenyellow;
+            width: 30%;
+            height: 33px;
+            flex-direction: column;
+            left:70%;
+            top: 110px;
+            
+                .hostName{
+                    width: 30%;
+                    font-size: 12px;
+                    margin-right: 10%;
+                }
+                .host{
+                    // border:1px solid blue;
+                    width: 32px;
+                    height: 32px;
+                    float:right;
+                    margin-left: 65%;
+                }
+        }
+
+       }
     }
-    @include Breakpoint.breakpoint-Mobile($break-min:376px, $break-max:425px){
-        margin-top: -20px;
+}
+
+@mixin Divtag{
+    @include Breakpoint.breakpoint-Mobile($break-min:0px, $break-max:767px){
+        // border:1px solid blue;
+        width: 100%;
+        height: auto;
+        top: -35px;
+        @include Breakpoint.breakpoint-Mobile($break-min:0px, $break-max:332px){
+            border:1px solid blue;
+        }
+       
     }
-    @include Breakpoint.breakpoint-Mobile($break-min:0px, $break-max:375px){
-        margin-top: -25px;
+}
+
+@mixin  tag {
+    @include Breakpoint.breakpoint-Mobile($break-min:0px, $break-max:767px){
+    flex-direction: row;
+    flex-grow: 1;
+    font-size: 10px;
+    height: 18px;
+    width: 82px;
+    padding-top: 5px;
+    padding-bottom:18px;
+    border-radius: 7px;
+    margin-right: 10px;
+    margin-top: 0;
+    margin-bottom: 5px;
+        
+    // @include Breakpoint.breakpoint-Mobile($break-min:304px, $break-max:332px){
+    //     width: 72px;
+    // }
+    @include Breakpoint.breakpoint-Mobile($break-min:0px, $break-max:333px){
+        width: 68px;
+        border-radius: 5px;
     }
+    }
+    
+    
 }
