--- a/src/composant/Content/Logement/Tag/tag.module.scss
+++ b/src/composant/Content/Logement/Tag/tag.module.scss
@@ -1,17 +1,20 @@
+@use '../../../../assets/styles/Mixin/mixin_Logement';
+@use '../../../../assets/styles/Breakpoint';
+
 .tags {
     width: 15%;
     height: 30px;
     display: inline-block;
+    flex-grow: 1;
     font-size: 18px;
     text-align: center;
     margin-top: 20px;
     margin-right: 20px;
-    min-width: 135px;
     padding-top: 10px;
     padding-bottom: 28px;
     border-radius: 10px;
     color: var(--ColorTexteTitre);
     background-color: var(--primaryColor);
     
-    
+        @include mixin_Logement.tag;
 }
